--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.5.0
 Django==4.0
+django-filter==21.1
 django-leaflet==0.28.2
 djangorestframework==3.13.1
 djangorestframework-gis==0.18
